// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contacts \`create\` should invoke \`call\` 1`] = `
Array [
  Array [
    "crm.contact.add",
    Object {
      "fields": Object {
        "COMMENTS": "Some comment",
      },
      "params": Object {
        "REGISTER_SONET_EVENT": "Y",
      },
    },
  ],
]
`;

exports[`Contacts \`create\` should work without optional params 1`] = `
Array [
  Array [
    "crm.contact.add",
    Object {
      "fields": Object {
        "COMMENTS": "Some comment",
      },
      "params": undefined,
    },
  ],
]
`;

exports[`Contacts \`get\` should invoke \`call\` 1`] = `
Array [
  Array [
    "crm.contact.get",
    Object {
      "id": "77",
    },
  ],
]
`;

exports[`Contacts \`list\` should invoke \`list\` 1`] = `
Array [
  Array [
    "crm.contact.list",
    Object {
      "filter": Object {
        ">PROBABILITY": 50,
      },
      "order": Object {
        "COMMENTS": "ASC",
      },
      "select": Array [
        "*",
        "UF_*",
      ],
      "start": 0,
    },
  ],
]
`;

exports[`Contacts \`list\` should work without optional params 1`] = `
Array [
  Array [
    "crm.contact.list",
    Object {},
  ],
]
`;

exports[`Contacts \`update\` should invoke \`call\` 1`] = `
Array [
  Array [
    "crm.contact.update",
    Object {
      "fields": Object {
        "COMMENTS": "Some comment",
      },
      "id": "77",
      "params": Object {
        "REGISTER_SONET_EVENT": "Y",
      },
    },
  ],
]
`;

exports[`Contacts \`update\` should work without optional params 1`] = `
Array [
  Array [
    "crm.contact.update",
    Object {
      "fields": Object {
        "COMMENTS": "Some comment",
      },
      "id": "77",
      "params": undefined,
    },
  ],
]
`;

exports[`Contacts should expose API methods 1`] = `
Object {
  "create": [Function],
  "fields": [Function],
  "get": [Function],
  "list": [Function],
  "update": [Function],
}
`;
